# hahaha

./: .gitignore  README.md  index.html  启动番茄钟.bat
.claude/: settings.local.json
pomodoro-tauri/: index.html  package-lock.json  package.json  vite.config.js
pomodoro-tauri/src/: main.js  style.css
pomodoro-tauri/src-tauri/: Cargo.toml  tauri.conf.json
pomodoro-tauri/src-tauri/capabilities/: default.json
pomodoro-tauri/src-tauri/src/: lib.rs  main.rs
