[package]
name = "pomodoro-tauri"
version = "1.0.0"
description = "A beautiful Pomodoro Timer desktop app"
authors = ["you"]
edition = "2021"

[lib]
name = "pomodoro_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
